# center

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  rxconfig.py
alembic/versions/: 1baa51ce6ec2_initial_user_model.py  61e94200eb47_initial_service_model.py  a9a2c6a17b8a_.py  d8f3c9dce545_service.py
app/: crud.py  dependencies.py  main.py  models.py
center/: center.py  models.py
center/backend/: __init__.py
center/backend/authentication/: __init__.py  models.py  states.py
center/backend/service/: __init__.py  models.py  routers.py  views.py
center/components/charts/: __init__.py
center/features/api/: __init__.py  models.py  service.py
center/features/authentication/: __init__.py  decorators.py  models.py  states.py
center/frontend/: __init__.py
center/frontend/components/charts/: line.py
center/frontend/layouts/: sidebar.py
center/frontend/pages/: discover.py  home.py  service.py  sponsorship.py
center/frontend/pages/auth/: login.py  signup.py
center/layouts/: __init__.py  dashboard.py  landing_page.py  sidebar.py
center/pages/: __init__.py  discover.py  home.py  service.py  sponsorship.py
center/pages/auth/: __init__.py  login.py  signup.py  state.py
center/pages/auth/ui/: __init__.py  hgroup.py  layouts.py  logo.py  social_login.py
server/: conftest.py  database.py  dependencies.py  main.py  models.py  schemas.py  test_main.py
server/asset/: crud.py  models.py  schemas.py  test_models.py  views.py
server/asset/tests/: test_crud.py  test_models.py  test_schemas.py
server/authentication/: controller.py  controllers.py  schemas.py  test_token.py  test_views.py  token.py  tokens.py  views.py
server/core/: database.py  error.py  schemas.py
server/dependencies/: oauth.py
server/routers/: user.py
server/server/: settings.py  urls.py
server/tag/: crud.py  models.py  schemas.py  views.py
server/task/: crud.py  models.py  schemas.py  views.py
server/task/tests/: test_views.py
server/user/: controller.py  crud.py  models.py  schemas.py  test_views.py  tests.py  views.py
server/user/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff_alter_user_username.py
