[tool.poetry]
name = "authentication"
version = "0.1.0"
description = ""
authors = ["wenke.lai <wenke.studio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
# a python linter and code formatter
ruff = "^0.4.4"
# test tools
pytest = "^8.2.1"
faker = "^25.2.0"

[tool.pytest.ini_options]
python_files = ['tests.py', 'test_*.py']
filterwarnings = [
  # PEP 565 suggests that DeprecationWarnings shouldn't be ignored by default
  # We should consider upgrade the related packages to fix the warnings
  # For example: `google` package seems deprecate lots of APIs
  "ignore::DeprecationWarning"
]

[tool.ruff]
# Set the maximum line length to 119.
line-length = 119

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
